Changed the close span

--- a/index.html
+++ b/index.html
@@ -591,10 +591,10 @@
 						<img src="http://i.imgur.com/0JgJmIjh.png" alt="Trivia Night Game">
 							<div class='project_info' onclick=''>Trivia Night
 								<div class="space20"></div>
-								<button class="gal_btn gal_btn1 fade-in four" data-index="1">View Details</button>
+								<button class="gal_btn fade-in four" data-index="1">View Details</button>
 							</div>
 							<div id="1" class="pop">
-								<button class="gal_btn" data-index="1">✖</button>
+								<button class="gal_btn closeX hairline" data-index="1"></button>
 								<h6>Trivia Night</h6>
 								<div class="techUsed">
 									<h3> <strong>TECH:</strong> HTML <strong> | </strong> CSS <strong> | </strong> VANILLA JAVASCRIPT</h3>
@@ -616,7 +616,7 @@
 								<button class="gal_btn fade-in four" data-index="2">View Details</button>
 							</div>
 						<div id="2" class="pop">
-							<button class="gal_btn" data-index="2">✖</button>
+							<button class="gal_btn closeX hairline" data-index="2"></button>
 							<h6>Cheerie</h6>
 							<div class="techUsed">
 								<h3> <strong>TECH:</strong> HTML <strong> | </strong> CSS <strong> | </strong> RUBY ON RAILS</h3>
@@ -636,7 +636,7 @@
 							<button class="gal_btn fade-in four" data-index="3">View Details</button>
 						</div>
 						<div id="3" class="pop">
-							<button class="gal_btn" data-index="3">✖</button>
+							<button class="gal_btn closeX hairline" data-index="3"></button>
 							<h6>iCare</h6>
 							<div class="techUsed">
 								<h3> <strong>TECH:</strong> HTML <strong> | </strong> CSS <strong> | </strong> RUBY ON RAILS (BACK-END) <strong> | <br></strong> ANGULAR(FRONT-END)</h3>
@@ -656,7 +656,7 @@
 									<button class="gal_btn gal_btn4 fade-in four">View Details</button>
 									</div>
 									<div class="pop pop4">
-									<button class="gal_btn" data-index="3">✖</button>
+									<button class="gal_btn closeX hairline" data-index="3"></button>
 									<h6>Node Beach House</h6>
 									<li>HTML</li>
 									<li>CSS</li>
@@ -685,7 +685,7 @@
 							<button class="gal_btn fade-in four" data-index="4">View Details</button>
 						</div>
 						<div id="4" class="pop">
-							<button class="gal_btn" data-index="4">✖</button>
+							<button class="gal_btn closeX hairline" data-index="4"></button>
 							<h6>General Assembly<br>WDI Yearbook</h6>
 							<div class="techUsed">
 								<h3> <strong>TECH:</strong> HTML <strong> | </strong> CSS <strong> | </strong> JAVASCRIPT <strong> | </strong> RUBY ON RAILS</h3>
@@ -706,7 +706,7 @@
 							<button class="gal_btn fade-in four" data-index="5">View Details</button>
 						</div>
 						<div id="5" class="pop">
-							<button class="gal_btn" data-index="5">✖</button>
+							<button class="gal_btn closeX hairline" data-index="5"></button>
 							<h6>GEICO Bus Tour</h6>
 							<p> My last major program at GEICO was a true labor of love. Being the lead of the project from conception to when it ended it's first season on tour. This acclaimed tour was so successful that GEICO ordered a second bus tour to be on the road the next tour season. Working hand in hand with RedPeg Marketing, we created a truly interactive experience.</p>
 							<p>On entrance, we collected consumer data through a gas card giveway that they entered at our tabletop kiosks, then had a  photo opportunity using our GEICO overlays with specialized characters, were entertained by our EMCEE on stage while they waited to enter the bus. Once on the GEICO bus, the consumer played GEICO pinball while waiting for their turn to sing and dance with the gecko in GEICO Karaoke. A full fan experience at the largest events on the East Coast.</p>
@@ -724,7 +724,7 @@
 							<button class="gal_btn fade-in four" data-index="6">View Details</button>
 						</div>
 						<div id="6" class="pop">
-							<button class="gal_btn" data-index="6">✖</button>
+							<button class="gal_btn closeX hairline" data-index="6"></button>
 							<h6>ProTrakr</h6>
 							<div class="techUsed">
 								<h3> <strong>TECH:</strong> HTML <strong> | </strong> SASS <strong> | </strong> JAVASCRIPT <strong> | </strong> RUBY ON RAILS  <strong> | </strong> HAML</h3>
@@ -744,7 +744,7 @@
 							<button class="gal_btn fade-in four" data-index="7">View Details</button>
 						</div>
 						<div id="7" class="pop">
-							<button class="gal_btn" data-index="7">✖</button>
+							<button class="gal_btn closeX hairline" data-index="7"></button>
 							<h6>Trivia Game</h6>
 							<div class="techUsed">
 								<h3> <strong>TECH:</strong> HTML <strong> | </strong> CSS <strong> | </strong> VANILLA JAVASCRIPT</h3>
@@ -764,7 +764,7 @@
 							<button class="gal_btn fade-in four" data-index="8">View Details</button>
 						</div>
 						<div id="8" class="pop">
-							<button class="gal_btn" data-index="8">✖</button>
+							<button class="gal_btn closeX hairline" data-index="8"></button>
 							<h6>Paintr</h6>
 							<div class="techUsed">
 								<h3> <strong>TECH:</strong> REACT <strong> | </strong> REDUX <strong> | </strong> CSS <strong> | </strong> HTML</h3>
@@ -784,7 +784,7 @@
 							<button class="gal_btn fade-in four" data-index="9">View Details</button>
 						</div>
 						<div id="9" class="pop">
-							<button class="gal_btn" data-index="9">✖</button>
+							<button class="gal_btn closeX hairline" data-index="9"></button>
 							<h6>Manager Pathways</h6>
 							<div class="techUsed">
 								<h3> <strong>TECH:</strong> REACT <strong> | </strong> SASS <strong> | </strong> CSS <strong> | </strong> HTML</h3>
@@ -805,7 +805,7 @@
 							<button class="gal_btn fade-in four" data-index="10">View Details</button>
 						</div>
 						<div id="10" class="pop">
-							<button class="gal_btn" data-index="10">✖</button>
+							<button class="gal_btn closeX hairline" data-index="10"></button>
 							<h6>TEKvideo Website</h6>
 							<div class="techUsed">
 								<h3> <strong>TECH: </strong> HTML <strong> | </strong> SASS  <strong> | </strong> Bootstrap <strong> | </strong> Isotope </h3>
@@ -826,7 +826,7 @@
 							<button class="gal_btn fade-in four" data-index="11">View Details</button>
 						</div>
 						<div id="11" class="pop">
-							<button class="gal_btn" data-index="11">✖</button>
+							<button class="gal_btn closeX hairline" data-index="11"></button>
 							<h6>Anagram Checker</h6>
 							<div class="techUsed">
 								<h3> <strong>TECH:</strong>  <strong> | </strong> SASS <strong> | </strong> CSS <strong> | </strong> HTML</h3>
