Moved skills section and added reasons to hire me section

--- a/resume.html
+++ b/resume.html
@@ -117,6 +117,7 @@
         <div class="section hardSkills">
           <h2 class="sectionTitle">HARD SKILLS</h2>
           <ul>
+						<li>Program Management</li>
             <li>Adobe Illustrator</li>
             <li>Adobe Photoshop</li>
             <li>Git/GitHub</li>
@@ -128,8 +129,8 @@
         <div class="section softSkills">
           <h2 class="sectionTitle">SOFT SKILLS</h2>
           <ul>
-            <li>Creativity</li>
-            <li>Problem Solving</li>
+            <li>Creative</li>
+            <li>Problem Solver</li>
             <li>Adaptable</li>
             <li>Optimistic</li>
             <li>Team Worker</li>
