adding responsiveness to new skills area

--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="stylesheets/style.css"
 	<link rel="stylesheet" href="stylesheets/animate.css">
-	<link rel="stylesheet" href="stylesheets/svgIcons.css">
-
 	<link rel="stylesheet" href="stylesheets/Audrey-Normal.css">
 	<link rel="stylesheet" href="fonts/Audrey-Normal.css">
 	<link rel="stylesheet" href="devicon-master/devicon.min.css">
-
-	<!-- <link rel="stylesheet" href="stylesheets/icons.css"> -->
+	<link rel="stylesheet" href="stylesheets/icons.css">
 	<link rel="stylesheet" href="bitIcon/variables.scss" type="text/css/scss">
 	<link rel="stylesheet" href="haml/haml.css">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
@@ -241,7 +239,7 @@
 							<div class="holder">
 								<div class="row -slide-top -opacity">
 									<div class="col-md-12">
-										<h2 class="skillsMainHeading">Hard Skills</h2>
+										<!-- <h2 class="skillsMainHeading">Hard Skills</h2> -->
 										<h2 class="skillsHeading">Front End</h2>
 											<ul class="skillsGrid">
 												<li><i class="devicon-html5-plain"></i><h4>HTML</h4></li>
@@ -570,14 +568,11 @@
 										<h2 class="skillsHeading">Marketing</h2>
 											<ul class="skillsGrid">
 												<li><i class="fas fa-dollar-sign"></i><h4>Budgeting</h4></li>
-
 												<li><i class="fas fa-hashtag"></i>
 													<!-- <i class="fas fa-thumbs-up"></i> -->
-													<h4>Social Media</h4></li>
-
+													<h4>Social Media</h4>
+												</li>
 												<li><i class="fas fa-file-signature"></i><h4>Content Creation</h4></li>
-
-
 												<li><i class="fas fa-chart-line"></i><h4>Data Analysis</h4></li>
 												<li class="widerLI2"><i class="fas fa-calendar-alt"></i><h4>Event Management</h4></li>
 												<li><i class="fas fa-pencil-ruler"></i>
@@ -618,7 +613,7 @@
 														<?xml version="1.0" encoding="utf-8"?>
 														<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 															 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
-														<path fill="#F91791" d="M86.562,40.791l-4.663-0.818c-0.587-1.869-1.338-3.683-2.245-5.42l2.723-3.88
+															 <path fill="#F91791" d="M86.562,40.791l-4.663-0.818c-0.587-1.869-1.338-3.683-2.245-5.42l2.723-3.88
 															c1.899-2.698,1.579-6.371-0.757-8.7l-3.593-3.593c-2.329-2.336-6.002-2.656-8.7-0.757l-3.88,2.723
 															c-1.737-0.909-3.551-1.663-5.42-2.253l-0.774-4.611c-0.549-3.267-3.378-5.658-6.69-5.655h-5.081
 															c-3.312-0.003-6.142,2.388-6.69,5.655l-0.818,4.663c-1.87,0.59-3.683,1.344-5.42,2.253l-3.88-2.723
@@ -657,8 +652,8 @@
 															 M59.409,40.574c-1.039-3.433-2.612-6.68-4.663-9.622c5.321,1.331,9.848,4.817,12.493,9.622H59.409z"/>
 														</svg>
 
-													</i><h4>SEO</h4></li>
-
+													</i><h4>SEO</h4>
+												</li>
 											</ul>
 										</div>
 						      </div>
@@ -1055,7 +1050,7 @@
 						<div class="row">
 						  <div class="me col-xs-6 col-sm-3">
 								<?xml version="1.0" encoding="utf-8"?>
-								<!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+
 								<svg version="1.1" id="icons" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 									 viewBox="0 0 175 175" style="enable-background:new 0 0 175 175;" xml:space="preserve">
 								<style type="text/css">
@@ -1167,10 +1162,8 @@
 											c-4.6-0.5-8.5-4.1-9.2-8.7c-0.6-3.4,0.5-6.7,2.8-9.1c0.3-0.3,0.5-0.6,0.7-1H18.1v52.2H70.4z"/>
 									</g>
 								</g>
-								</svg>
-
-
-								<h3>Problem Solving</h3><p></p></div>
+								</svg><h3>Problem Solving</h3><p></p>
+							</div>
 						  <div class="me col-xs-6 col-sm-3">
 								<?xml version="1.0" encoding="utf-8"?>
 								<!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -1451,7 +1444,6 @@
 				</div>
 			</section>
 			<section id="skills2">
-
 				<!-- <div class="holder">
 					<div class="title scrollflow -slide-top -opacity">
 						<h2>Testimonials</h2>
