--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
 								.creative1{fill:#F91791;}
 								.creative:hover .creative0{fill:#F91791;}
 								.creative:hover #bulb{fill:#000000;}
-								.creative:hover #ray .creative1{fill:#ffffff;}
+								.creative:hover #ray .creative1{fill:#ffffff;transition: all 2s;animation: flash 2s ease-in-out forwards infinite;}
 
 
 							</style>
@@ -1044,33 +1044,9 @@
 									.reliable .rel3{fill:none;stroke:#f91791;stroke-width:3;stroke-miterlimit:10;}
 
 									.reliable:hover .rel2{fill:#f91791;
-										transition: all 350ms;animation: heartBeat 2.5s linear infinite;}
+										transition: all 350ms;animation: flash 2s linear infinite;}
 
-									@keyframes heartBeat {
-									  0% {
-									    transform: scale(1);
-									  }
-									  25% {
-									   transform: scale(1.05);
-									  }
-									  50% {
-									   transform: scale(1);
-									  }
-									  75% {
-									   transform: scale(1.05);
-									  }
-									  100% {
-									   transform: scale(1);
-									  }
-									}
-									@keyframes pulse {
-										to {
-											transform: scale(0.8);
-										}
-									}
 								</style>
-								<g id="Layer_2">
-								</g>
 								<g id="Layer_1">
 									<g class="rel0">
 										<path class="rel1" d="M60.1,75c0.9,0,1.6-0.7,1.6-1.5c0.9-12,10.2-21.9,22.2-23.5c6.5-0.9,13.1,0.8,18.4,4.7
@@ -1191,70 +1167,70 @@
 		 										s3.2-2.1,5.2-2.3c0.5-0.1,1,0.1,1.4,0.4c0.4,0.4,0.6,0.9,0.6,1.4l0,21.7l19.2,0c-0.1-0.4-0.5-0.7-0.7-1c-2-2-3-4.6-3-7.3
 		 										c0-3,1.2-5.9,3.5-7.8c2.2-2,5.2-2.9,8.2-2.7c4.6,0.5,8.5,4.2,9.2,8.7c0.6,3.3-0.5,6.6-2.8,9c-0.3,0.3-0.5,0.6-0.7,1L126.2,101.9z"
 		 										/>
-
-
 									</g>
-
 								</g>
 								</svg><h3>Problem Solving</h3><p></p>
-
-
 							</div>
 						  <div class="me optimism col-xs-6 col-sm-3">
-
 								<?xml version="1.0" encoding="utf-8"?>
 								<svg  class="optimism" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 									 viewBox="0 0 175 175" enable-background="new 0 0 175 175" xml:space="preserve">
-								<g id="Guides_For_Artboard">
-								</g>
-								<g id="Layer_1">
+									 <style type="text/css">
+									 	/* .optimism #confetti{
+
+										}
+										.optimism:hover  #confetti{
+											fill:#fff;transition: all 2s;animation: flash 2s ease-in-out forwards infinite;
+
+										} */
+									 </style>
+								<g>
 									<g>
+											<rect id="confetti" x="32.14" y="65.395" transform="matrix(0.8217 -0.5699 0.5699 0.8217 -33.1344 31.6809)" fill="#F91791" width="3.859" height="6.811"/>
 
-											<rect x="32.14" y="65.395" transform="matrix(0.8217 -0.5699 0.5699 0.8217 -33.1344 31.6809)" fill="#F91791" width="3.859" height="6.811"/>
+											<rect id="confetti" x="129.89" y="17.472" transform="matrix(-0.4059 -0.9139 0.9139 -0.4059 166.2399 149.8258)" fill="#F91791" width="3.859" height="6.811"/>
 
-											<rect x="129.89" y="17.472" transform="matrix(-0.4059 -0.9139 0.9139 -0.4059 166.2399 149.8258)" fill="#F91791" width="3.859" height="6.811"/>
+											<rect id="confetti" x="39.038" y="12.685" transform="matrix(0.2853 -0.9584 0.9584 0.2853 13.8576 50.7645)" fill="#F91791" width="3.859" height="6.811"/>
 
-											<rect x="39.038" y="12.685" transform="matrix(0.2853 -0.9584 0.9584 0.2853 13.8576 50.7645)" fill="#F91791" width="3.859" height="6.811"/>
+											<rect id="confetti" x="11.007" y="95.186" transform="matrix(0.2853 -0.9584 0.9584 0.2853 -85.2475 82.8617)" fill="#F91791" width="3.859" height="6.811"/>
 
-											<rect x="11.007" y="95.186" transform="matrix(0.2853 -0.9584 0.9584 0.2853 -85.2475 82.8617)" fill="#F91791" width="3.859" height="6.811"/>
+											<rect id="confetti" x="11.007" y="95.186" transform="matrix(0.2853 -0.9584 0.9584 0.2853 -85.2475 82.8617)" fill="#F91791" width="3.859" height="6.811"/>
 
-											<rect x="11.007" y="95.186" transform="matrix(0.2853 -0.9584 0.9584 0.2853 -85.2475 82.8617)" fill="#F91791" width="3.859" height="6.811"/>
+											<rect id="confetti" x="143.173" y="42.871" transform="matrix(-0.3081 -0.9513 0.9513 -0.3081 145.7896 198.5777)" fill="#F91791" width="3.859" height="6.811"/>
 
-											<rect x="143.173" y="42.871" transform="matrix(-0.3081 -0.9513 0.9513 -0.3081 145.7896 198.5777)" fill="#F91791" width="3.859" height="6.811"/>
+											<rect id="confetti" x="12.365" y="68.395" transform="matrix(-0.6441 -0.7649 0.7649 -0.6441 -31.4185 128.9839)" fill="#F91791" width="3.859" height="6.811"/>
 
-											<rect x="12.365" y="68.395" transform="matrix(-0.6441 -0.7649 0.7649 -0.6441 -31.4185 128.9839)" fill="#F91791" width="3.859" height="6.811"/>
+											<rect id="confetti" x="158.329" y="65.574" transform="matrix(-0.6441 -0.7649 0.7649 -0.6441 210.7223 235.9955)" fill="#F91791" width="3.859" height="6.811"/>
 
-											<rect x="158.329" y="65.574" transform="matrix(-0.6441 -0.7649 0.7649 -0.6441 210.7223 235.9955)" fill="#F91791" width="3.859" height="6.811"/>
+											<rect id="confetti" x="72.961" y="3.771" transform="matrix(0.9688 0.2478 -0.2478 0.9688 4.1152 -18.3373)" fill="#F91791" width="3.859" height="6.811"/>
 
-											<rect x="72.961" y="3.771" transform="matrix(0.9688 0.2478 -0.2478 0.9688 4.1152 -18.3373)" fill="#F91791" width="3.859" height="6.811"/>
-
-											<rect x="20.193" y="32.733" transform="matrix(0.9874 -0.1583 0.1583 0.9874 -5.4425 3.9582)" fill="#F91791" width="3.859" height="6.811"/>
+											<rect id="confetti" x="20.193" y="32.733" transform="matrix(0.9874 -0.1583 0.1583 0.9874 -5.4425 3.9582)" fill="#F91791" width="3.859" height="6.811"/>
 									</g>
 
-										<ellipse transform="matrix(0.4042 -0.9147 0.9147 0.4042 47.3553 175.6331)" fill="#F91791" cx="158.486" cy="51.469" rx="3.399" ry="3.399"/>
-									<circle fill="#F91791" cx="140.081" cy="65.822" r="3.399"/>
-									<path fill="#F91791" d="M146.557,117.414c0.671,1.754-0.207,3.719-1.961,4.389c-1.754,0.671-3.719-0.207-4.389-1.961
+										<ellipse id="confetti" transform="matrix(0.4042 -0.9147 0.9147 0.4042 47.3553 175.6331)" fill="#F91791" cx="158.486" cy="51.469" rx="3.399" ry="3.399"/>
+									<circle id="confetti" fill="#F91791" cx="140.081" cy="65.822" r="3.399"/>
+									<path id="confetti" fill="#F91791" d="M146.557,117.414c0.671,1.754-0.207,3.719-1.961,4.389c-1.754,0.671-3.719-0.207-4.389-1.961
 										c-0.671-1.754,0.207-3.719,1.961-4.389C143.921,114.782,145.886,115.66,146.557,117.414z"/>
 
-										<ellipse transform="matrix(0.9999 -0.0107 0.0107 0.9999 -1.2892 0.2326)" fill="#F91791" cx="20.999" cy="120.078" rx="3.399" ry="3.399"/>
-									<path fill="#F91791" d="M106.261,6.836c4.462,1.006,3.955,6.801-0.614,7.016C101.185,12.847,101.692,7.052,106.261,6.836z"/>
+										<ellipse id="confetti" transform="matrix(0.9999 -0.0107 0.0107 0.9999 -1.2892 0.2326)" fill="#F91791" cx="20.999" cy="120.078" rx="3.399" ry="3.399"/>
+									<path id="confetti" fill="#F91791" d="M106.261,6.836c4.462,1.006,3.955,6.801-0.614,7.016C101.185,12.847,101.692,7.052,106.261,6.836z"/>
 
-										<ellipse transform="matrix(0.4042 -0.9147 0.9147 0.4042 -37.092 47.6118)" fill="#F91791" cx="17.999" cy="52.276" rx="3.399" ry="3.399"/>
-									<path fill="#F91791" d="M37.688,95.457c0.67,1.754-0.207,3.719-1.961,4.389c-1.754,0.671-3.719-0.207-4.389-1.961
+										<ellipse id="confetti" transform="matrix(0.4042 -0.9147 0.9147 0.4042 -37.092 47.6118)" fill="#F91791" cx="17.999" cy="52.276" rx="3.399" ry="3.399"/>
+									<path id="confetti" fill="#F91791" d="M37.688,95.457c0.67,1.754-0.207,3.719-1.961,4.389c-1.754,0.671-3.719-0.207-4.389-1.961
 										c-0.671-1.754,0.207-3.719,1.961-4.389C35.052,92.826,37.017,93.704,37.688,95.457z"/>
 									<g>
-										<polygon fill="#27AAE1" points="125.345,68.242 125.345,68.034 128.81,68.034 		"/>
+										<polygon id="confetti" fill="#27AAE1" points="125.345,68.242 125.345,68.034 128.81,68.034 		"/>
 									</g>
 									<g>
-										<polygon fill="#27AAE1" points="148.216,68.242 148.216,68.034 151.681,68.034 		"/>
+										<polygon id="confetti" fill="#27AAE1" points="148.216,68.242 148.216,68.034 151.681,68.034 		"/>
 									</g>
-									<path fill="#F91791" d="M87.5,89.807c-8.006,0-14.521-6.514-14.521-14.52c0-8.006,6.514-14.521,14.521-14.521
+									<path id="body" fill="#F91791" d="M87.5,89.807c-8.006,0-14.521-6.514-14.521-14.52c0-8.006,6.514-14.521,14.521-14.521
 										c8.006,0,14.52,6.514,14.52,14.521C102.02,83.293,95.506,89.807,87.5,89.807z M87.5,62.241c-7.193,0-13.046,5.852-13.046,13.046
 										c0,7.193,5.852,13.045,13.046,13.045s13.045-5.852,13.045-13.045C100.545,68.093,94.693,62.241,87.5,62.241z"/>
 									<g>
-										<rect x="86.932" y="139.008" fill="#F91791" width="1.136" height="32.474"/>
+										<rect id="body" x="86.932" y="139.008" fill="#F91791" width="1.136" height="32.474"/>
 									</g>
-									<path fill="#F91791" d="M98.936,172.664H76.065c-0.957,0-1.732-0.775-1.732-1.733v-64.018L50.684,83.252
+									<path id="body" fill="#F91791" d="M98.936,172.664H76.065c-0.957,0-1.732-0.775-1.732-1.733v-64.018L50.684,83.252
 										c-0.676-0.678-0.676-1.774,0-2.452l5.475-5.475c0.325-0.325,0.767-0.507,1.226-0.507l0,0c0.459,0,0.901,0.182,1.226,0.507
 										l18.196,18.211c2.389-1.139,5.014-1.737,7.662-1.737h6.064c2.642,0,5.258,0.598,7.647,1.737l18.211-18.211
 										c0.676-0.676,1.776-0.676,2.452,0l5.475,5.475c0.675,0.678,0.675,1.774,0,2.452l-23.646,23.662v64.018
@@ -1262,33 +1238,33 @@
 										c-1.07-1.255-5.73-2.2-11.318-2.2c-4.988,0-9.225,0.754-10.841,1.809L57.71,76.352l-0.623,0.623l-0.102-0.101l-5.568,5.5
 										L75.4,106.063v64.978h24.2v-65.048L122.999,82.747z"/>
 
-										<rect x="155.107" y="91.886" transform="matrix(-0.866 -0.5 0.5 -0.866 245.3888 256.3336)" fill="#F91791" width="3.859" height="6.811"/>
+										<rect id="confetti" x="155.107" y="91.886" transform="matrix(-0.866 -0.5 0.5 -0.866 245.3888 256.3336)" fill="#F91791" width="3.859" height="6.811"/>
 
-										<rect x="60.507" y="56.686" transform="matrix(0.2853 -0.9584 0.9584 0.2853 -12.9701 102.7885)" fill="#F91791" width="3.859" height="6.811"/>
+										<rect id="confetti" x="60.507" y="56.686" transform="matrix(0.2853 -0.9584 0.9584 0.2853 -12.9701 102.7885)" fill="#F91791" width="3.859" height="6.811"/>
 
-										<rect x="121.007" y="103.986" transform="matrix(0.7889 0.6145 -0.6145 0.7889 91.941 -52.876)" fill="#F91791" width="3.859" height="6.811"/>
+										<rect id="confetti" x="121.007" y="103.986" transform="matrix(0.7889 0.6145 -0.6145 0.7889 91.941 -52.876)" fill="#F91791" width="3.859" height="6.811"/>
 
-										<rect x="56.107" y="111.686" transform="matrix(0.2853 -0.9584 0.9584 0.2853 -68.8289 137.8797)" fill="#F91791" width="3.859" height="6.811"/>
+										<rect id="confetti" x="56.107" y="111.686" transform="matrix(0.2853 -0.9584 0.9584 0.2853 -68.8289 137.8797)" fill="#F91791" width="3.859" height="6.811"/>
 
-										<rect x="106.707" y="52.286" transform="matrix(0.6441 0.7649 -0.7649 0.6441 81.2605 -63.2794)" fill="#F91791" width="3.859" height="6.811"/>
-									<circle fill="#F91791" cx="83.981" cy="43.822" r="3.399"/>
-									<path fill="#F91791" d="M138.857,89.914c0.671,1.754-0.207,3.719-1.961,4.389c-1.754,0.671-3.719-0.207-4.389-1.961
+										<rect id="confetti" x="106.707" y="52.286" transform="matrix(0.6441 0.7649 -0.7649 0.6441 81.2605 -63.2794)" fill="#F91791" width="3.859" height="6.811"/>
+									<circle id="confetti" fill="#F91791" cx="83.981" cy="43.822" r="3.399"/>
+									<path id="confetti" fill="#F91791" d="M138.857,89.914c0.671,1.754-0.207,3.719-1.961,4.389c-1.754,0.671-3.719-0.207-4.389-1.961
 										s0.207-3.719,1.961-4.389C136.221,87.282,138.186,88.16,138.857,89.914z"/>
-									<path fill="#F91791" d="M48.504,48.305l-0.141,0.141c-0.389,0.389-1.025,0.389-1.414,0L29.695,31.193
+									<path id="confetti" fill="#F91791" d="M48.504,48.305l-0.141,0.141c-0.389,0.389-1.025,0.389-1.414,0L29.695,31.193
 										c-0.389-0.389-0.389-1.025,0-1.414l0.141-0.141c0.389-0.389,1.025-0.389,1.414,0L48.504,46.89
 										C48.893,47.279,48.893,47.916,48.504,48.305z"/>
-									<path fill="#F91791" d="M87.6,32.441h-0.2c-0.55,0-1-0.45-1-1l0-24.4c0-0.55,0.45-1,1-1h0.2c0.55,0,1,0.45,1,1l0,24.4
+									<path id="confetti" fill="#F91791" d="M87.6,32.441h-0.2c-0.55,0-1-0.45-1-1l0-24.4c0-0.55,0.45-1,1-1h0.2c0.55,0,1,0.45,1,1l0,24.4
 										C88.6,31.991,88.15,32.441,87.6,32.441z"/>
-									<path fill="#F91791" d="M128.836,46.246l-0.141-0.141c-0.389-0.389-0.389-1.025,0-1.414l17.253-17.253
+									<path id="confetti" fill="#F91791" d="M128.836,46.246l-0.141-0.141c-0.389-0.389-0.389-1.025,0-1.414l17.253-17.253
 										c0.389-0.389,1.025-0.389,1.414,0l0.141,0.141c0.389,0.389,0.389,1.025,0,1.414l-17.253,17.253
 										C129.862,46.635,129.225,46.635,128.836,46.246z"/>
-									<path fill="#F91791" d="M108.656,35.756l-0.183-0.081c-0.503-0.222-0.733-0.816-0.511-1.319l9.861-22.318
+									<path id="confetti" fill="#F91791" d="M108.656,35.756l-0.183-0.081c-0.503-0.222-0.733-0.816-0.511-1.319l9.861-22.318
 										c0.222-0.503,0.816-0.733,1.319-0.511l0.183,0.081c0.503,0.222,0.733,0.816,0.511,1.319l-9.861,22.318
 										C109.753,35.748,109.159,35.978,108.656,35.756z"/>
-									<path fill="#F91791" d="M66.831,36.003l-0.188,0.069c-0.516,0.189-1.094-0.079-1.283-0.595l-8.388-22.913
+									<path id="confetti" fill="#F91791" d="M66.831,36.003l-0.188,0.069c-0.516,0.189-1.094-0.079-1.283-0.595l-8.388-22.913
 										c-0.189-0.516,0.079-1.094,0.595-1.283l0.188-0.069c0.516-0.189,1.094,0.079,1.283,0.595l8.388,22.913
 										C67.616,35.236,67.348,35.814,66.831,36.003z"/>
-									<path fill="#F91791" d="M49.688,57.457c0.67,1.754-0.207,3.719-1.961,4.389c-1.754,0.671-3.719-0.207-4.389-1.961
+									<path id="confetti" fill="#F91791" d="M49.688,57.457c0.67,1.754-0.207,3.719-1.961,4.389c-1.754,0.671-3.719-0.207-4.389-1.961
 										c-0.671-1.754,0.207-3.719,1.961-4.389C47.052,54.826,49.017,55.704,49.688,57.457z"/>
 								</g>
 								</svg>
@@ -1346,7 +1322,6 @@
 								<h3>Optimism</h3><p></p></div>
 							<div class="me col-xs-6 col-sm-3">
 								<?xml version="1.0" encoding="utf-8"?>
-								<!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 								<svg class="quality" version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 									 viewBox="0 0 175 175" style="enable-background:new 0 0 175 175;" xml:space="preserve">
 								<style type="text/css">
@@ -1354,7 +1329,6 @@
 									.quality .quality0{fill:none;stroke:#F91791;stroke-width:3;stroke-miterlimit:10;}
 									.quality .quality1{fill:none;stroke:#F91791;stroke-width:3;stroke-miterlimit:10;}
 									.quality .quality2{fill:#F91791;}
-									/* .quality:hover .quality0{fill:#F91791;} */
 									.quality:hover .quality1{fill:#F91791;stroke:#F91791;stroke-width:3;stroke-miterlimit:10;	-moz-transition: all 0.5s;
 										-o-transition: all 0.5s;
 										-webkit-transition: all 0.5s;
@@ -1384,15 +1358,66 @@
 									<style type="text/css">
 										.outOfTheBox .outOfTheBoxIcon0{fill:#F91791;}
 										.outOfTheBox .outOfTheBoxIcon1{fill:#F91791;stroke:#000000;stroke-width:3;stroke-miterlimit:10;}
-										/* .outOfTheBox .outOfTheBoxIcon0{fill:#F91791;}
-										.outOfTheBox .outOfTheBoxIcon1{fill:none;stroke:#F91791;stroke-width:3;stroke-miterlimit:10;} */
 										.outOfTheBox #bulb{fill:none;stroke:#F91791;stroke-width:3;stroke-miterlimit:10;}
 										.outOfTheBox #gear path {fill:#F91791;}
 										.outOfTheBox #innerGear .outOfTheBoxIcon1 {fill:yellow;stroke:yellow;stroke-width:3;stroke-miterlimit:10;}
 										.outOfTheBox:hover #bulb{fill:#F91791;stroke:#F91791;stroke-width:3;stroke-miterlimit:10;}
-										.outOfTheBox:hover #ray .outOfTheBoxIcon0{fill:#fff;}
+										.outOfTheBox:hover #ray .outOfTheBoxIcon0{fill:#fff;transition: all 2s;animation: flash 2s ease-in-out forwards infinite;}
 										.outOfTheBox:hover #gear path {fill:#000;}
 										.outOfTheBox:hover #innerGear .outOfTheBoxIcon1 {fill:#000;stroke:#F91791;stroke-width:3;stroke-miterlimit:10;}
+										.outOfTheBox:hover #lightbulb {transition: all 2s;animation: rise 2s ease forwards 1;}
+
+										@-webkit-keyframes rise {
+											0% {
+										    -webkit-transform: translate(0, 10px);
+										  }
+											50%{
+												-webkit-transform: translate(0, 5px) ;
+											}
+
+										  100% {
+										    -webkit-transform: translate(0, 0px) ;
+										  }
+										}
+										@keyframes rise {
+											0% {
+												-webkit-transform: translate(0, 10px);
+										            transform: translate(0, 10px);
+										    opacity: 1;
+										  }
+											50%{
+										    -webkit-transform: translate(0, 5px) ;
+										            transform: translate(0, 5px) ;
+										    opacity: 1;
+										  }
+
+										  100% {
+										    -webkit-transform: translate(0, 0px) ;
+										            transform: translate(0, 0px) ;
+										    opacity: 1;
+										  }
+										}
+
+										@-webkit-keyframes flash {
+										  0%, 50%, 100% {
+										    opacity: 1;
+										  }
+
+										  25%, 75% {
+										    opacity: 0;
+										  }
+										}
+
+										@keyframes flash {
+										  0%, 50%, 100% {
+										    opacity: 1;
+										  }
+
+										  25%, 75% {
+										    opacity: 0;
+										  }
+										}
+
 									</style>
 									<g id="box">
 										<g>
