refactor css to scss

--- a/index.html
+++ b/index.html
@@ -1700,7 +1700,7 @@
 					<a href="https://lafrish.github.io/TEKvideo/" target= '_blank' class="button"><i class="fa fa-globe"></i>TEKvideo</a>
 				</div>
 			</div>
-			<div id="11" class="pop">
+			<!-- <div id="11" class="pop">
 				<button class="gal_btn closeX hairline" data-index="11"></button>
 				<h6>Anagram Checker</h6>
 				<div class="techUsed">
@@ -1711,7 +1711,7 @@
 					<a href="" target= '_blank' class="button"><i class="fa fa-github"></i>Github Repo</a>
 					<a href="" target= '_blank' class="button"><i class="fa fa-globe"></i>TEKvideo</a>
 				</div>
-			</div>
+			</div> -->
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
