--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>Farishta Haider</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=1000; user-scalable=0;" />
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="stylesheets/style.css"
@@ -1381,45 +1382,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- <section id="skills2">
-				<div class="holder">
-					<div class="title scrollflow -slide-top -opacity">
-						<h2>Testimonials</h2>
-					</div>
 
-						<div class="slide_container">
-							<ul class="bxslider">
-								<li>
-									<div>
-										<div class="quote">"Farishta worked with The Washington Post on one of our biggest annual events. She was instrumental in the success of this event with her pre-planning the event down to the day-of event execution. She was energetic and detail oriented during the event preparation. She helps to analyze projects from the beginning in order to troubleshoot any downstream problems. She was great to work with and very helpful!"</div><br>
-										<div class="client-info">Megan Nunn, <br> Production Manager at The Washington Post</div>
-									</div>
-								</li>
-								<li>
-									<div>
-										<p class="quote">
-											"I have had the distinct pleasure of working with Farishta over the past 5 years as she managed the RedPeg/GEICO relationship. She was an integral part in the successful launch and execution of our very first “GEICO Bus” program. One of Farishta’s greatest strengths is her ability to multitask in a very fast moving event environment. She pays close attention to the digital/social components that allows her to make informed decisions about where/when the GEICO tours should execute. She managed each event with attention to detail, and ensured the team had everything they needed prior to activation. Farishta is a great team player. She understands we all must play our part in order to keep the wheels in motion and heading in the same direction."	</p><br>
-											<div class="client-info">Brad Nierenberg, <br>President / CEO and founder of RedPeg Marketing </div>
-										</div>
-									</li>
-									<li>
-										<div>
-											<p class="quote">"I worked with Farishta on multiple projects for GEICO; during that time she demonstrated strong interpersonal skills as well as a great understanding of the brand identity. At all times she drove the business objectives forward, motivating the team to care about the projects and be invested in their success. She was the go-to person for many aspects of the day to day management of the account and had great solutions when it came to problem solving. Her positive attitude and motivational leadership was terrific throughout. Farishta also has a very good grasp of technical matters and used that knowledge to evaluate and ensure the projects had robust solutions in those areas. It's my pleasure to recommend her."
-											</p><br>
-											<div class="client-info"> Martin Codd, <br>Experiential Architect (VP of Operations at RedPeg Marketing)</div>
-										</div>
-									</li>
-									<li>
-										<div>
-											<p class="quote"> "Farishta is an eager and ambitious event marketer, who is always looking into new ways to approach potential customers. She also is a resident and passionate expert on social media and blogging. We have leaned on Farishta to help implement numerous social media extensions from photo sharing to social gaming elements. All said, Farishta is a well rounded marketer with experience of core and emerging event marketing trends." </p><br>
-											<div class="client-info">Peter Kirschner, <br>Marketing Planning Manager at Optum360</div>
-										</div>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-			</section> -->
 			<section id="resume">
 				<div class="holder">
 					<div class="title scrollflow -slide-top -opacity">
@@ -1560,7 +1523,7 @@
 						<div class="mail"><a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com"><i class="fa fa-envelope"></i> farishta.haider<span>@</span>gmail.com</a></div>
 						<div class="tel"><a href="tel:301-509-2483"><i class="fa fa-mobile"></i>301 - 509 - 2483</a></div>
 					</div>
-					<div class="social scrollflow -slide-top -opacity">
+					<div class="social">
 						<a href="https://www.behance.net/LaFrish" target="_blank"><i class="fa fa-behance"></i></a>
 						<a href="https://github.com/LaFrish" target="_blank"><i class="fa fa-github"></i></a>
 						<a href="http://codepen.io/lafrish/" target="_blank"><i class="fa fa-codepen"></i></a>
@@ -1681,7 +1644,7 @@
 					<h3> <strong>TECH:</strong> REACT <strong> | </strong> SASS <strong> | </strong> CSS <strong> | </strong> HTML</h3>
 				</div>
 				<p><strong>DETAILS BEING UPDATED</strong>.</p>
-				<!-- <p>A drawing app written in <strong>React</strong>.</p><p></p> -->
+
 				<div class="links scrollflow">
 					<a href="https://github.com/LaFrish/react-pathways" target= '_blank' class="button"><i class="fa fa-github"></i>Github Repo</a>
 					<a href="https://lafrish.github.io/Paintr/" target= '_blank' class="button"><i class="fa fa-globe"></i>React Pathways</a>
@@ -1693,7 +1656,7 @@
 				<div class="techUsed">
 					<h3> <strong>TECH: </strong> HTML <strong> | </strong> SASS  <strong> | </strong> Bootstrap <strong> | </strong> Isotope </h3>
 				</div>
-				<!-- <p>A portfolio site using <strong>Boot</strong>.</p> -->
+
 				<p><strong>DETAILS BEING UPDATED</strong>.</p><p></p>
 				<div class="links scrollflow">
 					<a href="https://github.com/LaFrish/TEKvideo" target= '_blank' class="button"><i class="fa fa-github"></i>Github Repo</a>
