--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Farishta Haider</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=1000; user-scalable=0;" />
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
