Updating Meta Data

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 })(window,document,'script','dataLayer','GTM-PXCWVZ');</script>
 <!-- End Google Tag Manager -->
 
-<!-- <meta property="og:image" content="[url to image]" />
-<meta property="og:title" content="[page name]" /> -->
-<meta property="og:description" content="[content description]" />
+<meta property="og:image" content="https://imgur.com/i1iAv2z" />
+<meta property="og:title" content="Farishta Haider's Portfolio" />
+<meta property="og:description" content="The Portfolio of Farishta Haider" />
 <meta property="og:site_name" content="Farishta Haider's Portfolio"/>
 <meta property="og:title" content="Welcome to the wonderful world of Farishta Haider"/>
 <meta property="og:description" content="The professional portfolio for Farishta Haider. A web developer with a strong background in marketing."/>
-<meta property="og:image" content="images/portfolio_thumbnail.png">
-<meta property="og:url" content="http://lafrish.github.io/">
+<meta property="og:image" content="images/thumbnail.png">
+<meta property="og:url" content="http://farishtahaider.com">
 </head>
 <body>
 	<!-- Google Tag Manager (noscript) -->
