Added react pathways link

--- a/index.html
+++ b/index.html
@@ -1647,7 +1647,7 @@
 
 				<div class="links scrollflow">
 					<a href="https://github.com/LaFrish/react-pathways" target= '_blank' class="button"><i class="fa fa-github"></i>Github Repo</a>
-					<a href="https://lafrish.github.io/Paintr/" target= '_blank' class="button"><i class="fa fa-globe"></i>React Pathways</a>
+					<a href="https://lafrish.github.io/react-pathways/" target= '_blank' class="button"><i class="fa fa-globe"></i>React Pathways</a>
 				</div>
 			</div>
 			<div id="10" class="pop">
