added soft skills to list

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-PXCWVZ');</script>
 <!-- End Google Tag Manager -->
-<meta name="google-site-verification" content="TLxYX3L0TjubXDYrrL_w0VZzEOMEYPFzngznSLhXQHE" />
+
 <meta property="og:image" content="https://imgur.com/i1iAv2z" />
 <meta property="og:title" content="Farishta Haider's Portfolio" />
 <meta property="og:description" content="The Portfolio of Farishta Haider" />
@@ -580,15 +580,9 @@
 											<ul class="skillsGrid">
 												<li><i class="fas fa-dollar-sign"></i><h4>Budgeting</h4></li>
 												<li><i class="fas fa-chart-line"></i><h4>Data Analysis</h4></li>
-												<li><i class="fas fa-hashtag"></i>
-													<!-- <i class="fas fa-thumbs-up"></i> -->
-													<h4>Social Media</h4>
-												</li>
-												<li><i class="fas fa-file-signature"></i><h4>Content Creation</h4></li>
-												<li>
-													<i>
-														<?xml version="1.0" encoding="utf-8"?>
-														<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+												<li><i class="fas fa-hashtag"></i><h4>Social Media</h4></li>
+												<li class="shorterLI"><i><?xml version="1.0" encoding="utf-8"?>
+														<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 															 viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 															 <path fill="#F91791" d="M86.562,40.791l-4.663-0.818c-0.587-1.869-1.338-3.683-2.245-5.42l2.723-3.88
 															c1.899-2.698,1.579-6.371-0.757-8.7l-3.593-3.593c-2.329-2.336-6.002-2.656-8.7-0.757l-3.88,2.723
@@ -627,16 +621,14 @@
 															c2.054-2.942,3.631-6.189,4.672-9.622h7.83C64.592,64.277,60.062,67.764,54.737,69.092z M69.666,50.022
 															c-0.001,1.722-0.229,3.436-0.679,5.098h-8.587c0.535-3.378,0.535-6.819,0-10.196h8.587C69.437,46.586,69.665,48.3,69.666,50.022z
 															 M59.409,40.574c-1.039-3.433-2.612-6.68-4.663-9.622c5.321,1.331,9.848,4.817,12.493,9.622H59.409z"/>
-														</svg>
-
-													</i><h4>SEO</h4>
+														</svg></i><h4>SEO</h4>
 												</li>
+												<li><i class="fas fa-file-signature"></i><h4>Content Creation</h4></li>
 
 												<li><i class="fas fa-pencil-ruler"></i>
 													<!-- <i class="fas fa-paint-brush"></i> -->
 													<h4>Graphic Design</h4></li>
 												<li class="widerLI2"><i class="fas fa-calendar-alt"></i><h4>Event Management</h4></li>
-
 												<li class="widerLI2">
 													<i>
 														<?xml version="1.0" encoding="utf-8"?>
@@ -667,51 +659,24 @@
 													</i>
 													<h4>Project Management</h4>
 												</li>
-
 											</ul>
 										</div>
 						      </div>
-								<!-- <div class="row scrollflow -slide-right -opacity">
+								<div class="row scrollflow -slide-right -opacity">
 									<div class="col-md-12">
 										<h2 class="skillsHeading">Soft Skills</h2>
 											<ul class="skillsGrid">
-												<li>
-													<i class="">
-														<?xml version="1.0" encoding="utf-8"?>
-														<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-															 viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
-															<style type="text/css">
-																.analytics0{fill:#F91791;}
-															</style>
-															<g>
-																<path class="analytics0" d="M48.2,22.4l-3.9-0.8c-0.5-2.9-1.6-5.6-3.3-7.9l2.2-3.3c0.3-0.4,0.2-0.9-0.1-1.3l-2.2-2.2
-																	c-0.3-0.3-0.9-0.4-1.3-0.1L36.3,9c-2.3-1.7-5-2.8-7.9-3.3l-0.8-3.9c-0.1-0.5-0.5-0.8-1-0.8h-3.2c-0.5,0-0.9,0.3-1,0.8l-0.8,3.9
-																	C18.7,6.2,16,7.3,13.7,9l-3.3-2.2C10,6.5,9.5,6.6,9.1,6.9L6.9,9.1C6.6,9.5,6.5,10,6.8,10.4L9,13.7c-1.6,2.3-2.8,5-3.3,7.9l-3.9,0.8
-																	c-0.5,0.1-0.8,0.5-0.8,1v3.2c0,0.5,0.3,0.9,0.8,1l3.9,0.8C6.2,31.3,7.3,34,9,36.3l-2.2,3.3c-0.3,0.4-0.2,0.9,0.1,1.3l2.2,2.2
-																	c0.3,0.3,0.9,0.4,1.3,0.1l3.3-2.2c2.3,1.7,5,2.8,7.9,3.3l0.8,3.9c0.1,0.5,0.5,0.8,1,0.8h3.2c0.5,0,0.9-0.3,1-0.8l0.8-3.9
-																	c2.9-0.5,5.6-1.6,7.9-3.3l3.3,2.2c0.4,0.3,0.9,0.2,1.3-0.1l2.2-2.2c0.3-0.3,0.4-0.9,0.1-1.3L41,36.3c1.6-2.3,2.8-5,3.3-7.9l3.9-0.8
-																	c0.5-0.1,0.8-0.5,0.8-1v-3.2C49,22.9,48.6,22.5,48.2,22.4z M25,38.2c-7.3,0-13.2-5.9-13.2-13.2S17.7,11.8,25,11.8
-																	S38.2,17.7,38.2,25S32.3,38.2,25,38.2z"/>
-																<path class="analytics0" d="M33,30.7c-0.1,0-4.4-1.6-4.5-1.6l0,0l-0.8-1.4l0,0V27c0.8-1.1,1.8-1.5,1.8-2.6v-0.7c1,0.5,1.9-3.8,0.6-3.8
-																	c0.1-0.8,0.1-1.9,0.1-2.5c-0.1-0.9-1.2-1.3-1.2-1.3c-0.3-1.7-2.2-2.2-3.9-2c-3.8,0.2-5.5,2.3-5.3,5.8c-1.1,0.3-0.4,4,0.7,3.8h0.1
-																	c0,0.5-0.1,1.2,0.4,1.8l1.4,1.5v0.8l0,0l-0.9,1.4l0,0c-3.8,1.4-5.4,1.6-6.3,2.9c2.2,3.1,5.8,5.1,9.9,5.1s7.7-2,9.9-5.1
-																	C34.5,31.5,34,31.1,33,30.7C33.1,30.7,33.1,30.7,33,30.7z"/>
-															</g>
-														</svg>
-													</i>
-													<h4>Project Management</h4>
-												</li>
-												<li><i class=""></i><h4>Communication</h4></li>
-												<li><i class=""></i><h4>Problem Solving</h4></li>
-												<li><i class=""></i><h4>Critical Thinker</h4></li>
-												<li><i class=""></i><h4>Creative</h4></li>
-												<li><i class=""></i><h4>Optimistic</h4></li>
-												<li><i class=""></i><h4>Adaptiable</h4></li>
-												<li><i class=""></i><h4>Reliable</h4></li>
-												<li><i class=""></i><h4>Team player</h4></li>
+												<li><i class="fas fa-comments"></i><h4>Communication</h4></li>
+												<li><i class="fas fa-puzzle-piece"></i><h4>Problem Solving</h4></li>
+												<li><i class="fas fa-brain"></i><h4>Critical Thinker</h4></li>
+												<li><i class="fas fa-lightbulb"></i><h4>Creative</h4></li>
+												<li><i class="fas fa-grin-alt"></i><h4>Optimistic</h4></li>
+												<li><i class="fas fa-arrows-alt"></i><h4>Adaptiable</h4></li>
+												<li><i class="fas fa-umbrella"></i><h4>Reliable</h4></li>
+												<li><i class="fas fa-users"></i><h4>Team player</h4></li>
 											</ul>
 										</div>
-						      </div> -->
+						      </div>
 								</div>
 							</aside>
 						</div>
@@ -1393,7 +1358,6 @@
 					</div>
 				</div>
 			</section>
-
 			<section id="resume">
 				<div class="holder">
 					<div class="title scrollflow -slide-top -opacity">
