Added rough details for Teksystems experience

--- a/index.html
+++ b/index.html
@@ -459,10 +459,10 @@
 													</i>
 													<h4>Google Analytics</h4>
 												</li>
-										</ul>
+											</ul>
+										</div>
 									</div>
-								</div>
-								<div class="row scrollflow -slide-right -opacity">
+									<div class="row scrollflow -slide-right -opacity">
 									<div class="col-md-12">
 										<h2 class="skillsHeading">eLearning</h2>
 											<ul class="skillsGrid">
@@ -574,7 +574,7 @@
 													</ul>
 												</div>
 								      </div>
-								<div class="row scrollflow -slide-right -opacity">
+									<div class="row scrollflow -slide-right -opacity">
 									<div class="col-md-12">
 										<h2 class="skillsHeading">Marketing</h2>
 											<ul class="skillsGrid">
@@ -662,7 +662,7 @@
 											</ul>
 										</div>
 						      </div>
-								<div class="row scrollflow -slide-right -opacity">
+									<div class="row scrollflow -slide-right -opacity">
 									<div class="col-md-12">
 										<h2 class="skillsHeading">Soft Skills</h2>
 											<ul class="skillsGrid">
@@ -678,8 +678,8 @@
 										</div>
 						      </div>
 								</div>
-							</aside>
-						</div>
+								</aside>
+							</div>
 			</section>
 			<section id="portfolio">
 				<div class="holder">
@@ -1618,7 +1618,7 @@
 				<div class="techUsed">
 					<h3> <strong>TECH:</strong> REACT <strong> | </strong> SASS <strong> | </strong> CSS <strong> | </strong> HTML</h3>
 				</div>
-				<p><strong>DETAILS BEING UPDATED</strong>.</p>
+				<p>A informative page written in <strong>React</strong>. Based on the client's request and mock up. A timeline layout, with the funcationality to select the bulleted title and have the description appear. This was the first version of the website. The 2nd impletmentation of the site would direct users to the specific pathway. </p>
 
 				<div class="links scrollflow">
 					<a href="https://github.com/LaFrish/react-pathways" target= '_blank' class="button"><i class="fa fa-github"></i>Github Repo</a>
@@ -1632,7 +1632,8 @@
 					<h3> <strong>TECH: </strong> HTML <strong> | </strong> SASS  <strong> | </strong> Bootstrap <strong> | </strong> Isotope </h3>
 				</div>
 
-				<p><strong>DETAILS BEING UPDATED</strong>.</p><p></p>
+				<p>A portfolio page written in <strong>HTML/SASS/JavaScript</strong>.</p>
+				<p>This page was created to show the ability of the TEKsystems Video Team and showcase some of their work.</p>
 				<div class="links scrollflow">
 					<a href="https://github.com/LaFrish/TEKvideo" target= '_blank' class="button"><i class="fa fa-github"></i>Github Repo</a>
 					<a href="https://lafrish.github.io/TEKvideo/" target= '_blank' class="button"><i class="fa fa-globe"></i>TEKvideo</a>
