Updated meta data

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 })(window,document,'script','dataLayer','GTM-PXCWVZ');</script>
 <!-- End Google Tag Manager -->
 
-<meta property="og:image" content="https://imgur.com/i1iAv2z" />
+<!-- <meta property="og:image" content="https://imgur.com/i1iAv2z" /> -->
 <meta property="og:title" content="Farishta Haider's Portfolio" />
 <meta property="og:description" content="The Portfolio of Farishta Haider" />
 <meta property="og:site_name" content="Farishta Haider's Portfolio"/>
