--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Farishta Haider</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content ="width=device-width,initial-scale=0.9,user-scalable=yes" />
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=yes"  />
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+	<!-- <meta name="viewport" content ="width=device-width,initial-scale=1,user-scalable=yes" /> -->
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="stylesheets/style.css"
@@ -76,7 +78,7 @@
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->
 
-		<header class="close">
+		<!-- <header class="close">
 			<nav class="nav">
 				<div class="container menu">
 					<div class="menu-bg"></div>
@@ -90,7 +92,7 @@
 					</div>
 				</div>
 			</nav>
-		</header>
+		</header> -->
 
 		<section id="welcome">
 			<div class="skewed-bg">
