--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->
 
-		<!-- <header class="close">
+		<header class="close">
 			<nav class="nav">
 				<div class="container menu">
 					<div class="menu-bg"></div>
@@ -92,7 +92,7 @@
 					</div>
 				</div>
 			</nav>
-		</header> -->
+		</header>
 
 		<section id="welcome">
 			<div class="skewed-bg">
