--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Farishta Haider</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=yes"  />
+	<meta name="viewport" content="width=device-width,initial-scale=0.9,maximum-scale=0.9,user-scalable=no"  />
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<!-- <meta name="viewport" content ="width=device-width,initial-scale=1,user-scalable=yes" /> -->
 	<link rel="shortcut icon" href="favicon.ico" />
