Fixed width issue on responsive by changing width of gallery-items

--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
 												<li><i class="fas fa-puzzle-piece"></i><h4>Problem Solving</h4></li>
 												<li><i class="fas fa-brain"></i><h4>Critical Thinker</h4></li>
 												<li><i class="fas fa-lightbulb"></i><h4>Creative</h4></li>
-												<li><i class="fas fa-grin-alt"></i><h4>Optimistic</h4></li>
+												<li><i class="fas fa-grin-alt"></i><h4>Enthusiastic</h4></li>
 												<li><i class="fas fa-arrows-alt"></i><h4>Adaptiable</h4></li>
 												<li><i class="fas fa-umbrella"></i><h4>Reliable</h4></li>
 												<li><i class="fas fa-users"></i><h4>Team player</h4></li>
@@ -1084,15 +1084,6 @@
 								<?xml version="1.0" encoding="utf-8"?>
 								<svg  class="optimism" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 									 viewBox="0 0 175 175" enable-background="new 0 0 175 175" xml:space="preserve">
-									 <style type="text/css">
-									 	/* .optimism #confetti{
-
-										}
-										.optimism:hover  #confetti{
-											fill:#fff;transition: all 2s;animation: flash 2s ease-in-out forwards infinite;
-
-										} */
-									 </style>
 									<g>
 										<g>
 												<rect id="confetti" x="32.14" y="65.395" transform="matrix(0.8217 -0.5699 0.5699 0.8217 -33.1344 31.6809)" fill="#F91791" width="3.859" height="6.811"/>
@@ -1228,7 +1219,7 @@
 										<i></i>
 										<i></i>
 										<i></i>
-								<h3>Optimism</h3><p></p></div>
+								<h3>Enthusiasm</h3><p></p></div>
 							<div class="me col-xs-6 col-sm-3">
 								<?xml version="1.0" encoding="utf-8"?>
 								<svg class="quality" version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
