--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 	<title>Farishta Haider</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"  />
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-	<!-- <meta name="viewport" content ="width=device-width,initial-scale=1,user-scalable=yes" /> -->
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="stylesheets/style.css"
@@ -21,14 +19,11 @@
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet">
-	<!-- <link rel="stylesheet" type="text/css" href="https://tympanus.net/Tutorials/CircleHoverEffects/css/common.css"/>
-	<link rel="stylesheet" type="text/css" href="https://tympanus.net/Tutorials/CircleHoverEffects/css/style.css"/> -->
 	<link red="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 	<script type="text/javascript" src="javascripts/modernizr.custom.79639.js"></script>
-	<!-- <script type="text/javascript" src="http://tympanus.net/Tutorials/CircleHoverEffects/js/modernizr.custom.79639.js"></script> -->
 	<script type="text/javascript" src="fonts/fontsmoothie.min.js"></script>
 	<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.js"></script>
@@ -63,7 +58,7 @@
 })(window,document,'script','dataLayer','GTM-PXCWVZ');</script>
 <!-- End Google Tag Manager -->
 
-<!-- <meta property="og:image" content="https://imgur.com/i1iAv2z" /> -->
+<meta property="og:image" content="images/thumbnail.png" />
 <meta property="og:title" content="Farishta Haider's Portfolio" />
 <meta property="og:description" content="The Portfolio of Farishta Haider" />
 <meta property="og:site_name" content="Farishta Haider's Portfolio"/>
@@ -73,10 +68,62 @@
 <meta property="og:url" content="http://farishtahaider.com">
 </head>
 <body>
+<!--
+ _______                                  _          _
+|   ____|                     _          | |        | |
+|  |                         (_)         | |      __| |__
+|  |___     ____    _   __    _     ___  | |  _  |__   __|  ___
+|  ____|  / __  \  | |//\_\  | |  / /\_\ | |/_  \   | |   / __  \
+|  |     | (  )  | | |/      | | | ( _   | (  ) |   | |  | (  )	|
+|  |     | \_ /  | | |       | |  ___) ) | |  | |   | |  | \_ /	|
+|__|      \___/|_| |_|       |_| |____/  |_|  |_|   |_|   \___/||
+ __    __                        _
+|  |  |  |             _        | |
+|  |  |  |            (_)       | |
+|  |__|  |	  ____	   _    ___ | |    ___     _   __
+|   __   |  / __   \  |	|  / / \| |  / ___ \  | |//\_\
+|  |  |  | | (  )  |  | | | |  |  | | _____/  | |/
+|  |  |  | | \_ /  |  | | | \_/ | | | |____   | |
+|__|  |__|  \___/|_|  |_|  \___/|_|  \____ )  |_|
+
+
+ ******                              ***
+*********                            ***
+***    ***                           ***
+***    ***      ****        ****  	 ***    ***     ********
+***   ***      *******     ******* 	 ***   ***    ****    ***
+********      ***   ***   ***    **  ***  ***     ***
+***   ***     ***   ***   ***        *******       *********
+***    ***    ***   ***   ***    **  ***  ***             ****
+***     ***    *******     ***  ***	 ***   ***    ***     ****
+***      ***    ****        *****    ***    ***     ********
+
+ __    __
+|  |  |  |	  _
+|  |  |  |	 (_)
+|  |__|  |	 _   _   __     ___
+|   __   |  | | | |/ /\_\ / ___ \
+|  |  |  |  | | | |/     |  ____/
+|  |  |  |  | | | |      | |____
+|__|  |__|  |_| |_|       \ ____)
+ ___        ___             __
+|    \    /    |           |  |
+|  |\ \  / /|  |           |  |
+|  | \ \/ / |  |     ___   |  |
+|  |  \_/   |  |   / ___ \ |  |
+|  |        |  |  |  ____/ |__|
+|  |        |  |  | |____    _
+|__|        |__|   \ ____)  (_)
+
+	Made with <3 by Farishta Haider - http://farishtahaider.com -->
+
+
 	<!-- Google Tag Manager (noscript) -->
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PXCWVZ"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->
+
+
 
 		<header class="close">
 			<nav class="nav">
